--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-markdown-display": "^7.0.2",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "expo-camera": "~15.0.16",
+    "expo-image-picker": "~15.0.7",
+    "expo-media-library": "~16.0.4",
+    "expo-location": "~17.0.1",
+    "react-native-maps": "1.18.0",
+    "react-native-maps-directions": "^1.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
